2007-01-07	Benedikt Meurer <benny@xfce.org>

	* exo-mount/exo-mount-hal.c: Handle blank discs properly. Try to come
	  up with a usable error message if the user tries to mount a blank
	  disc or a pure audio disc.
	* exo-mount/exo-mount-hal.c: Fix crash with certain types of discs.
	  Bug #2723.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2007-01-07	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, Makefile.am, exo-hal/: Add utility library exo-hal,
	  which provides functions to lookup display names and icons for HAL
	  devices. These functions are used by both exo-mount and Thunar, and
	  probably additional software in the future. The library is there to
	  avoid having to duplicate these rather messy functions all over the
	  place, and to make translators life easier, having to translate them
	  only in a single place.
	* docs/reference/: Update the reference manual.
	* exo-mount/: Use exo-hal to determine the display names and icons for
	  the HAL devices.
	* po/POTFILES.in: Add new files here.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2007-01-06	Benedikt Meurer <benny@xfce.org>

	* exo-mount-notify/main.c(signal_io_func): Do not block Thunar's
	  unmount operation waiting for the last notification to go
	  away.
	* configure.in.in, exo-mount/: Be smarter when checking device files
	  for equality, comparing them by their major/minor device ids instead
	  of their paths.

2007-01-06	Benedikt Meurer <benny@xfce.org>

	* exo-mount/exo-mount-fstab.c: Add missing <errno.h> include.

2007-01-06	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, Makefile.am, exo-mount/: Add mount utility, that
	  uses HAL if available, but can also operate without HAL. This is
	  necessary because other mount utilities like gnome-mount or pmount
	  do not always work properly, esp. with devices such as floppy
	  drives. Even worse those utilities behave differently depending on