@@ -1,3 +1,8 @@
+2007-01-08	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, exo-hal/exo-hal.c: Fix build with older HAL
+	  versions. Fix build on amd64. Bug #2725.
+
 2007-01-07	Benedikt Meurer <benny@xfce.org>
 
 	* exo-mount/exo-mount-hal.c: Handle blank discs properly. Try to come
